[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
base64-url = "2.0.2"
hmac = "0.12.1"
lazy-regex = "3.1.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
serial_test = "3.0.0"
sha2 = "0.10.8"
sqlb = "0.3.0"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
] }
strum_macros = "0.26.1"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.80"
httpc-test = "0.1.9"
